--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -16,7 +16,7 @@
 
 	<div class="post-head">
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-		<h5>{{excerpt}}</h5>
+		<h5 class="post-excerpt">{{excerpt}}</h5>
 		{{!--{{#has tag="lynx-roundup"}}Lynx Roundup {{#get "tags" filter="tag:link-roundup" include="count.posts"}}X of {{count.posts}}{{/has}}--}}
 
 		{{!--<div class="post-meta">
