--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -1,7 +1,7 @@
 <!-- start widget -->
 {{#get "posts" limit="3"}}
 <div class="widget">
-	<h4 class="title">{{t "Recent Posts"}}</h4>
+	<h4 class="title">Recent</h4>
 	<div class="content recent-post">
 		{{#foreach posts}}
 		<div class="recent-single-post">
