--- a/partials/widget-relatedpost.hbs
+++ b/partials/widget-relatedpost.hbs
@@ -1,6 +1,6 @@
 <!-- start widget -->
 <div class="widget">
-	<h4 class="title">Related Posts</h4>
+	<h4 class="title">Related</h4>
 	<div class="content recent-post">
 		{{#get "posts" limit="3" filter="id:-{{id}}+tag:{{primary_tag.slug}}"}}
 			{{#foreach posts}}
