--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -2,8 +2,8 @@
 <div class="widget text">
 	<h4 class="title">Welcome</h4>
 	<div class="content">
-		<p style="font-weight: 600;">We're a collective of unprofessional professionals who like to build things.</p>
-		<p>We use programming to acheive a means to an end, which is to enhance the small moments we call life. That, and also expediting the impending robot enslavement of humanity.</p>
+		<p style="margin-bottom:10px;">We're a collective of unprofessional professionals who like to build things.</p>
+		<p>We use programming to enhance the small moments we call life, as well as expedite the inevitable robot enslavement of humanity.</p>
 	 </div>
 </div>
 <!-- end widget -->
