--- a/default.hbs
+++ b/default.hbs
@@ -14,13 +14,13 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
-	<link rel="stylesheet" type="text/css" href="{{asset "css/hl-styles/monokai_sublime.css"}}">
+	<link rel="stylesheet" type="text/css" href="{{asset "css/hl-styles/code.css"}}">
 	{{#is "post"}}
 	<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
 	<meta property="og:image" content="https://miscellaneous.nyc3.digitaloceanspaces.com/hack.jpg"/>
 	{{/is}}
-
+	<script src="{{asset "/js/jquery.min.js"}}"></script>
 	<!-- only for demo -->
 	<!-- <link rel="stylesheet" type="text/css" href="{{asset "demo-assets/css/colpick.css"}}"> -->
 	{{! inserting theme config partial}}
@@ -37,4 +37,4 @@
 
 	{{! insert footer partial}}
 
-	{{#unless post}}{{> footer}}{{/unless}}
+{{> footer}}
