--- a/partials/widget-author.hbs
+++ b/partials/widget-author.hbs
@@ -12,6 +12,7 @@
         {{!--{{t "About"}}--}}<a href="{{url}}">{{name}}</a>
       </div>
       <div class="meta-info">
+        {{!--<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</a></span>--}}
         {{#if location}}
           <span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
         {{/if}}
